// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - areas.content - value[0] - Layout 1`] = `mocked`;

exports[`Mock render - areas.content - value[0] - Layout 2`] = `
Array [
  Array [
    Object {
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "className": "{}",
      "id": "areas.content",
    },
    Object {},
  ],
]
`;

exports[`Mock render - default - value[0] - Layout 1`] = `mocked`;

exports[`Mock render - default - value[0] - Layout 2`] = `
Array [
  Array [
    Object {
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "className": "{}",
      "id": "default",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.style - value[0] - Layout 1`] = `mocked`;

exports[`Mock render - properties.style - value[0] - Layout 2`] = `
Array [
  Array [
    Object {
      "children": <div
        data-testid="area-content"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "className": "{\\"style\\":{\\"border\\":\\"1px solid blue\\"}}",
      "id": "properties.style",
    },
    Object {},
  ],
]
`;
